--- a/_config.yml
+++ b/_config.yml
@@ -42,11 +42,11 @@ owner:
   site:           https://sahebg.github.io
   avatar:         https://avatars0.githubusercontent.com/u/27915058?v=4&s=400
   bio:            "Computer Science Major, Bioinformatics Bachelor, Deep Learning enthusiast, Gamer and ocassional Philosopher"
-  email:          you@email.com
+  email:          saheb.6390@email.com
   # Twitter nick for use in Twitter cards and follow button.
-  twitter: aron_bordin # if no twitter in this config, the twitter follow button will be removed
+  twitter: thesaheb # if no twitter in this config, the twitter follow button will be removed
   # GitHub nick for use in follow button in author block.
-  github: aron-bordin
+  github: sahebg
 
 # Twitter account associated with the site if different from owner/author twitter account.
 # Used in Twitter cards.
@@ -57,7 +57,7 @@ social:
   - title: "github"
     url: "https://github.com/sahebg"
   - title: "linkedin"
-    url: "https://br.linkedin.com/in/sahebghosh"
+    url: "https://www.linkedin.com/in/sahebg/"
 
 # Background image to be tiled on all pages
 background:
@@ -69,7 +69,7 @@ google_verify:
 bing_verify:
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-timezone:    America/New_York
+timezone:    Asia/Kolkata
 locale:      en_US
 future:      true
 highlighter: rouge
