--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ menu:
 owner:
   name:           Saheb Ghosh
   site:           https://sahebg.github.io
-  avatar:         https://avatars0.githubusercontent.com/u/27915058?v=4&s=400
+  avatar:         author.jpg
   bio:            "Computer Science Major, Bioinformatics Bachelor, Deep Learning enthusiast, Gamer and ocassional Philosopher"
   email:          saheb.6390@email.com
   # Twitter nick for use in Twitter cards and follow button.
