--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ owner:
   name:           Saheb Ghosh
   site:           https://sahebg.github.io
   avatar:         author.jpg
-  bio:            "Computer Science Major, Bioinformatics Bachelor, Deep Learning enthusiast, Gamer and ocassional Philosopher"
+  bio:            "Computer Science Major, Bioinformatics Bachelor, Deep Learning enthusiast, hard core Gamer , ocassional Philosopher, avid music listener and movie lover"
   email:          saheb.6390@email.com
   # Twitter nick for use in Twitter cards and follow button.
   twitter: thesaheb # if no twitter in this config, the twitter follow button will be removed
