--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ menu:
     url: '/categories'
     type: 'categories'
   - title: 'Favorites'
-    url: '#'
+    url: 'http://truedigger.blogspot.in'
     submenu:
       - title: 'TrueDigger Blog'
         url: 'https://truedigger.blogspot.in/'
