--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,8 @@ menu:
     url: '/'
   - title: 'Tags'
     url: '/tags'
+   - title: 'TrueDiggerBlog'
+     url: 'http://truedigger.blogspot.in/'
   - title: 'Categories'
     url: '/categories'
     type: 'categories'
