--- a/_config.yml
+++ b/_config.yml
@@ -22,18 +22,13 @@ menu:
     url: '/'
   - title: 'Tags'
     url: '/tags'
-  - title: 'TrueDiggerBlog'
-    url: 'http://truedigger.blogspot.in/'
   - title: 'Categories'
     url: '/categories'
     type: 'categories'
-  - title: 'Favorites'
-    url: 'http://truedigger.blogspot.in'
-    submenu:
-      - title: 'TrueDigger Blog'
-        url: 'https://truedigger.blogspot.in/'
-  - title: 'Posts'
+  - title: 'All Posts'
     url: '/posts'
+  - title: 'TrueDiggerBlog'
+    url: 'http://truedigger.blogspot.in/'
   - title: 'About'
     url: '/about'
 # Owner/author information
