--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:            Redemption
+title:            Random Access Memories
 description:      Blog of a Computer Enthusiast, Gamer, and part-time Spiritual Philospher
 
 # put your disqus here
