--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ owner:
   name:           Saheb Ghosh
   site:           https://sahebg.github.io
   avatar:         author.jpg
-  bio:            "Computer Science Major, Bioinformatics Bachelor, Deep Learning enthusiast, hard core Gamer , ocassional Philosopher, avid music listener and movie lover"
+  bio:            "Computer Science Major, Bioinformatics Bachelor, Deep Learning enthusiast, hard core Gamer , ocassional Philosopher, avid music listener and movie lover. Visit my other blog for Gaming and Technical review related posts @ Blogger (http://truedigger.blogspot.in/) "
   email:          saheb.6390@email.com
   # Twitter nick for use in Twitter cards and follow button.
   twitter: thesaheb # if no twitter in this config, the twitter follow button will be removed
