--- a/_config.yml
+++ b/_config.yml
@@ -50,6 +50,8 @@ social:
     url: "https://github.com/sahebg"
   - title: "linkedin"
     url: "https://www.linkedin.com/in/sahebg/"
+  - title: "blogger"
+    url: "http://truedigger.blogspot.in/"
 
 # Background image to be tiled on all pages
 background:
