--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title:            Random Access Memories
 description:      Blog of a Computer Enthusiast, Gamer, and part-time Spiritual Philospher
-
+author: sahebghosh
 # put your disqus here
 disqus_shortname: https-sahebg-github-io
 reading_time:     true # if true, shows the estimated reading time for a post
