--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ defaults:
   - scope:
       path: ""
     values:
-      image: /images/Algo/Algo1.jpg
+      image: images/Algo/Algo1.jpg
 # draw your top menu here
 # each item must have a title and a url.
 #   To list post categories. use type: 'categories'
